# mjs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEMPLATE.md  docker-compose.yml  package-lock.json  package.json
.cursor/: settings.json
.github/workflows/: ai.yml  backend.yml  deploy.yml  frontend.yml  security.yml
ai-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ai-service/src/: __init__.py  main.py
ai-service/tests/: test_main.py
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend/migrations/: 20240404_update_schema.sql  20250404040516_initial_schema.down.sql  20250404040516_initial_schema.sql
backend/src/: config.rs  database.rs  lib.rs  main.rs
backend/src/__tests__/: health_check_test.rs
backend/src/middleware/: auth.rs
backend/src/models/: article.rs  auth.rs  mod.rs  review.rs  user.rs
backend/src/routes/: article.rs  auth.rs  health.rs  mod.rs  review.rs  user.rs
backend/src/services/: article.rs  auth.rs  jwt.rs  mod.rs  review.rs  user.rs
backend/src/tests/: db.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  password.rs
docs/: .gitignore  API.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKUP_RECOVERY.md  CI_CD.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_TOOLS.md  INTERNATIONALIZATION.md  LOCAL_SETUP.md  MAINTENANCE.md  MIGRATION.md  MONITORING.md  PERFORMANCE.md  PLUGINS.md  PRECOMMIT.md  ROADMAP.md  SCALING.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  UPGRADE.md  WORKFLOW.md  index.md  package-lock.json  package.json  vite.config.js
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/docs/: component-library.md
frontend/src/: middleware.ts  page.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/archives/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/current-issue/: page.tsx
frontend/src/app/editorial-board/: page.tsx
frontend/src/app/for-authors/: page.tsx
frontend/src/app/for-reviewers/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/journals/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/config/: journal.config.ts  mjs.config.ts  morton.config.ts  theme.config.ts
frontend/src/core/components/auth/: ForgotPasswordForm.tsx  LoginForm.tsx  RegisterForm.tsx  RegistrationSuccessModal.tsx  ResetPasswordForm.tsx
frontend/src/core/components/landing/: FeaturedArticle.tsx  Features.tsx  Hero.tsx  LatestArticles.tsx  Sidebar.tsx
frontend/src/core/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  Navigation.tsx  index.ts
frontend/src/core/components/ui/: accordion.tsx  alert-dialog-headless.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  (+42 more)
frontend/src/core/config/: api.ts  site.ts  theme.ts
frontend/src/core/contexts/: AuthContext.tsx
frontend/src/core/hooks/: useApi.ts  useArticles.ts
frontend/src/core/providers/: config-provider.tsx  template-provider.tsx
frontend/src/core/services/: api.ts  article.ts  auth.ts
frontend/src/templates/default/: template.config.ts
frontend/src/types/: user.ts
scripts/: prd.txt  run-pre-push.sh  setup-hooks.sh
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
(+5 files in other folders)
