[tool.poetry]
name = "mjs-ai"
version = "0.1.0"
description = "AI/ML services for Modern Journal Systems"
authors = ["Balinesthesia <contact@anestesiudayana.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1"
transformers = "^4.38.2"
torch = "^2.2.1"
python-multipart = "^0.0.9"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
