# backend/Cargo.toml
[package]
name = "mjs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"