# backend/Cargo.toml
[package]
name = "mjs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-rt = "2.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }

# Authentication
jsonwebtoken = "9.2.0"
bcrypt = "0.15"
argon2 = "0.5.2"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# Error handling
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
sqlx-cli = "0.7"
